# case-agent

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md
backend/: .env.example  .gitignore  README.md  config.py  dependencies.py  exceptions.py  main.py  pyproject.toml  requirements.txt  validators.py
backend/agents/: README.md  __init__.py  advisor.py  advisor_router.py  agent_utils.py  base_agent.py  concrete_agents.py  orchestrator.py  prompts.py  retry_policy.py  router.py  socketio_manager.py  state.py  tasks.py  tool_schemas.py  utils.py  websocket_manager.py
backend/auth/: auth_backend.py  router.py  user_manager.py  users.py
backend/database/: README.md  __init__.py  engine.py  models.py  schemas.py  utils.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 2025_02_04_1200-a1b2c3d4e5f6_initial_schema.py  2025_02_04_1400-b2c3d4e5f6a7_add_rules_table.py  (+1 more)
backend/documents/: README.md  advice_generator.py  hearing_script.py  processor.py  router.py  statement_of_claim.py  templates.py
backend/memory/: README.md  case_blocks.py  cases_router.py  embeddings.py  memory_manager.py  router.py  session_manager.py  utils.py
backend/middleware/: __init__.py  logging.py  rate_limiter.py
backend/rules/: README.md  __init__.py  init_rules.py  rag_store.py  router.py  rule_retriever.py  static_rules.py
backend/tests/: conftest.py  test_agents.py  test_document_generation.py  test_memory.py  test_rules.py  test_tavily_search.py
backend/tools/: README.md  __init__.py  router.py  tavily_search.py
docs/: ACCESSIBILITY.md  (+3 more)
(+80 files in other folders)
