[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "case-agent-backend"
version = "0.1.0"
description = "Backend for Minnesota Conciliation Court Case Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.7",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "pgvector==0.2.4",
    "openai==1.10.0",
    "tavily-python==0.3.0",
    "fastapi-users[sqlalchemy]==12.1.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "websockets==12.0",
    "pypdf2==3.0.1",
    "pdfplumber==0.10.3",
    "pillow==10.3.0",
    "reportlab==4.0.9",
    "setuptools==80.10.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
